refactor dependencies add detekt