@@ -1,33 +1,6 @@
-buildscript {
 
-    ext.versions = [
-            'android_ktx'      : '1.0.0',
-            'appcompat'        : '1.0.0',
-            'arch_lifecycle'   : '2.0.0',
-            'arch_room'        : '2.0.0-rc01',
-            'arch_paging'      : '2.0.0',
-            'browser'          : '1.0.0',
-            'constraint_layout': '2.0.0-alpha2',
-            'crashlytics'      : '2.9.5',
-            'dagger'           : '2.16',
-            'fragment'         : '1.0.0',
-            'fabric_gradle'    : '1.26.0',
-            'firebase_core'    : '16.0.3',
-            'firebase_config'  : '16.0.0',
-            'material'         : '1.0.0',
-            'glide'            : '4.8.0',
-            'lottie'           : '2.6.1',
-            'kotlin'           : '1.2.71',
-            'kotlin_coroutines': '0.30.0',
-            'retrofit'         : '2.4.0',
-            'okHttp'           : '3.11.0',
-            'mockito'          : '2.22.0',
-            'play_services'    : '4.1.0',
-            'jSoup'            : '1.11.3',
-            'test_arch'        : '2.0.0-rc01',
-            'test_espresso'    : '3.1.0-alpha4',
-            'test_runner'      : '1.1.0-alpha4'
-    ]
+buildscript {
+    apply from: "$rootDir/dependencies.gradle"
 
     repositories {
         google()
@@ -36,7 +9,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$versions.kotlin"
         classpath "io.fabric.tools:gradle:$versions.fabric_gradle"
@@ -47,6 +20,7 @@ buildscript {
 
 plugins {
     id "com.github.ben-manes.versions" version "0.20.0" // dependencyUpdates
+    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC12"
 }
 
 allprojects {
@@ -55,8 +29,18 @@ allprojects {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
+
+    apply from: "$rootDir/detekt/detekt.gradle"
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+tasks.withType(AbstractCompile) {
+    options.compilerArgs += ["--add-modules", "java.xml.bind"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += ["--add-modules", "java.xml.bind"]
 }
